Fixed the home pages and add skills pages

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- --------- Navbar Start --------- -->
     <header>
       <nav class="container">
-        <a href="#" class="logo">Port<span>folio</span></a>
+        <a href="#" class="logo">Porto<span>folio</span></a>
         <div class="links">
           <ul>
             <li>
@@ -74,7 +74,7 @@
           </div>
           <div class="showcase-image">
             <img src="./Assets/person1.png" class="person" alt="Raditya" />
-            <img src="./Assets/circle1.png" class="shape circle1" alt="" />
+            <img src="./Assets/circle1.png" class="shape circle" alt="" />
             <img src="./Assets/dots.png" class="shape dots" alt="" />
           </div>
         </div>
@@ -580,25 +580,96 @@
 
       <section class="skills section">
         <div class="container">
-          <div class="box-heading">
-            <h3 class="sub-heading">My Skills</h3>
-            <h1 class="heading">Let me help you</h1>
-            <div class="box-desc">
-              <p class="text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Consequatur, saepe non nostrum soluta molestiae veniam laborum,
-                fugit commodi magnam nihil eum amet. Quis libero iste eius
-                earum. Quasi, nobis dolorum.
-              </p>
-              <a href="#" class="btn">Hire me</a>
+          <div class="skills-box">
+            <div class="box-heading">
+              <h3 class="sub-heading">My Skills</h3>
+              <h1 class="heading">Let me help you</h1>
+              <div class="box-desc">
+                <p class="text">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Consequatur, saepe non nostrum soluta molestiae veniam
+                  laborum, fugit commodi magnam nihil eum amet. Quis libero iste
+                  eius earum. Quasi, nobis dolorum.
+                </p>
+                <a href="#" class="btn">Hire me</a>
+              </div>
             </div>
+            <div class="skills-wrap">
+              <div class="skill">
+                <div class="sk-progress">
+                  <svg>
+                    <circle cx="75" cy="75" r="68" />
+                  </svg>
+                  <h2 class="counter"><span data-target="40">0</span>%</h2>
+                </div>
+                <div class="sk-title">HTML</div>
+              </div>
+              <div class="skill">
+                <div class="sk-progress">
+                  <svg>
+                    <circle cx="75" cy="75" r="68" />
+                  </svg>
+                  <h2 class="counter"><span data-target="48">0</span>%</h2>
+                </div>
+                <div class="sk-title">CSS</div>
+              </div>
+              <div class="skill">
+                <div class="sk-progress">
+                  <svg>
+                    <circle cx="75" cy="75" r="68" />
+                  </svg>
+                  <h2 class="counter"><span data-target="10">0</span>%</h2>
+                </div>
+                <div class="sk-title">JavaScript</div>
+              </div>
+              <div class="skill">
+                <div class="sk-progress">
+                  <svg>
+                    <circle cx="75" cy="75" r="68" />
+                  </svg>
+                  <h2 class="counter"><span data-target="2">0</span>%</h2>
+                </div>
+                <div class="sk-title">UI Design</div>
+              </div>
+            </div>
+            <img src="./Assets/dots.png" class="shape dots">
+            <img src="./Assets/square1.png" class="shape square">
           </div>
-          <div class="skills-wrap"></div>
         </div>
       </section>
 
       <!-- --------- Services Section --------- -->
 
+      <section class="services section">
+        <div class="container">
+          <div class="services-info">
+            <h3 class="sub-heading">My services</h3>
+            <h1 class="heading">Things i may do for my clients</h1>
+            <p class="text">
+              From offering in-depth user research, to helping with design and testing, I can help bring your product to life.
+            </p>
+            <div class="milestones">
+              <div class="ml">
+                <h2 class="number"><span>2</span>+</h2>
+                <h5>Years</h5>
+              </div>
+              <div class="ml">
+                <h2 class="number"><span>20</span>+</h2>
+                <h5>Projects</h5>
+              </div>
+              <div class="ml">
+                <h2 class="number"><span>8</span>+</h2>
+                <h5>Clients</h5>
+              </div>              
+            </div>
+            <div class="cta">
+              <a href="#" class="btn">Hire me</a>
+              <a href="./Assets/markusCV.pdf" download class="btn secondary-btn">Download Cv</a>
+            </div>
+          </div>
+          <div class="services-grid"></div>
+        </div>
+      </section>
       <!-- --------- Portfolio Section --------- -->
 
       <!-- --------- Testimonials Section --------- -->
