add contact section

--- a/index.html
+++ b/index.html
@@ -935,7 +935,9 @@
       </section>
       <!-- --------- Contact Section --------- -->
       <section class="contact section">
+        <img src="./Assets/triangle.png" class="shape triangle">
         <div class="container">
+          <img src="./Assets/square2.png" class="shape square">
           <div class="contact-info">
             <h3 class="sub-heading">Contact Me</h3>
             <h1 class="heading">Let's work together</h1>
@@ -943,16 +945,39 @@
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione
               rerum architecto consectetur suscipit, totam corporis!
             </p>
-            <a href="mailto:radityama8@gmail.com" class="mail">radityama8@gmail.com
+            <a href="mailto:radityama8@gmail.com" class="mail"
+              >radityama8@gmail.com
               <i class="uil uil-arrow-right"></i>
             </a>
           </div>
 
-          <form action="index.html" class="contact-form"></form>
+          <form action="index.html" class="contact-form">
+            <h3>Send me a message</h3>
+            <input
+              type="text"
+              class="form-input"
+              placeholder="Your Name"
+              required
+            />
+            <input
+              type="email"
+              class="form-input"
+              placeholder="Your Email"
+              required
+            />
+            <textarea
+              placeholder="Project Details"
+              class="form-input"
+              required
+            ></textarea>
+            <input type="submit" value="Send" class="btn" />
+          </form>
         </div>
       </section>
 
       <!-- --------- Subscription Section --------- -->
+
+      .
     </main>
 
     <footer>
