--- a/index.html
+++ b/index.html
@@ -29,23 +29,23 @@
     <!-- --------- Navbar Start --------- -->
     <header class="scrolled">
       <nav class="container">
-        <a href="#" class="logo">Porto<span>folio</span></a>
+        <a href="#" class="logo">Port<span>folio</span></a>
         <div class="links">
           <ul>
             <li>
-              <a href="#" class="nav-link">Home</a>
+              <a href="#home" class="nav-link">Home</a>
             </li>
             <li>
-              <a href="#" class="nav-link">About</a>
+              <a href="#about" class="nav-link">About</a>
             </li>
             <li>
-              <a href="#" class="nav-link">Services</a>
+              <a href="#services" class="nav-link">Services</a>
             </li>
             <li>
-              <a href="#" class="nav-link">Portfolio</a>
+              <a href="#portfolio" class="nav-link">Portfolio</a>
             </li>
             <li>
-              <a href="#" class="nav-link">Contact</a>
+              <a href="#contact" class="nav-link">Contact</a>
             </li>
           </ul>
           <i class="uil uil-moon toggle-btn"></i>
@@ -56,7 +56,7 @@
 
     <main>
       <!-- --------- Showcase Area Section --------- -->
-      <section class="showcase-area">
+      <section class="showcase-area" id="home">
         <img src="./Assets/square1.png" class="shape square" alt="" />
         <div class="container">
           <div class="showcase-info">
@@ -81,7 +81,7 @@
       </section>
 
       <!-- --------- About Section --------- -->
-      <section class="about section">
+      <section class="about section" id="about">
         <img src="./Assets/triangle.png" class="shape triangle" alt="" />
         <div class="container">
           <div class="about-grid">
@@ -640,7 +640,7 @@
 
       <!-- --------- Services Section --------- -->
 
-      <section class="services section">
+      <section class="services section" id="services">
         <img src="./Assets/triangle.png" class="shpe triangle" />
         <div class="container">
           <div class="services-info">
@@ -727,7 +727,7 @@
 
       <!-- --------- Portfolio Section --------- -->
 
-      <section class="portofolio section">
+      <section class="portofolio section" id="portfolio">
         <div class="modal stopScrolling">
           <div class="modal-overlay"></div>
           <div class="slider-wrap">
@@ -934,10 +934,10 @@
         </div>
       </section>
       <!-- --------- Contact Section --------- -->
-      <section class="contact section">
-        <img src="./Assets/triangle.png" class="shape triangle">
+      <section class="contact section" id="contact">
+        <img src="./Assets/triangle.png" class="shape triangle" />
         <div class="container">
-          <img src="./Assets/square2.png" class="shape square">
+          <img src="./Assets/square2.png" class="shape square" />
           <div class="contact-info">
             <h3 class="sub-heading">Contact Me</h3>
             <h1 class="heading">Let's work together</h1>
@@ -977,11 +977,57 @@
 
       <!-- --------- Subscription Section --------- -->
 
-      .
+      <section class="subscription section">
+        <div class="container">
+          <img src="./Assets/map.png" alt="" class="map" />
+          <div class="sub-box">
+            <img src="./Assets/square2.png" alt="" class="shape square" />
+            <div class="sub-info">
+              <h3 class="sub-heading">Newsletter</h3>
+              <h1 class="heading">Get news about my projects</h1>
+              <p class="text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
+                perspiciatis natus ratione quisquam numquam. Ea ipsa quis
+                deleniti dolore quod?
+              </p>
+            </div>
+            <form action="index.html">
+              <input
+                type="email"
+                placeholder="Email"
+                class="form-input"
+                required
+              />
+              <input type="submit" value="Subscribe" class="btn" />
+            </form>
+          </div>
+        </div>
+      </section>
     </main>
 
+    <!-- --------- Footer --------- -->
     <footer>
-      <!-- --------- Footer --------- -->
+      <div class="container">
+        <a href="#" class="logo">Port<span>folio</span></a>
+        <p class="text">&copy; Copyright 2022, All rights reserved</p>
+        <ul class="social-media">
+          <li>
+            <a href="#" class="social-link">
+              <i class="uil uil-facebook-f"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="social-link">
+              <i class="uil uil-twitter"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="social-link">
+              <i class="uil uil-instagram"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
     </footer>
 
     <!-- JavaScript Files -->
