--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   </head>
 
   <body>
+    <div class="overlay"></div>
     <!-- --------- Navbar Start --------- -->
     <header class="scrolled">
       <nav class="container">
@@ -49,6 +50,10 @@
             </li>
           </ul>
           <i class="uil uil-moon toggle-btn"></i>
+        </div>
+        <div class="hamburger">
+          <div class="bar"></div>
+          <div class="bar"></div>
         </div>
       </nav>
     </header>
