Portofolio website with light & dark mode

--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
       <!-- --------- Services Section --------- -->
 
       <section class="services section" id="services">
-        <img src="./Assets/triangle.png" class="shpe triangle" />
+        <img src="./Assets/triangle.png" class="shape triangle" />
         <div class="container">
           <div class="services-info">
             <h3 class="sub-heading">My services</h3>
